V2 | #00 | Moving all IT into one module